--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "@mui/x-data-grid": "^8.19.0",
     "@tailwindcss/vite": "^4.1.15",
+    "firebase": "^12.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
